--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Prueba</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Tecnologia Web - Portal de Asignaciones | Nombre | UPDS -Cbba.</title>
+  <meta name="description" content="Pagina de portal de asignaciones Fabiola Soliz para la materia de tecnologia web en UPDS">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Que es esto xD</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit <br> Corporis suscipit dolores 
-        aut sed harum cum labore id quos quo aspernatur, dolorem illo blanditiis repudiandae <br> 
-        eveniet facere esse, assumenda, nulla odio.</p>
+  <header>
+    <h1>Estudiante: Fabiola Soliz</h1>
+    <img src="imagenes/profile.png" alt="My Profile Picture">
+  </header> 
+  <main>
+    <h2>Tecnologia Web - Assignment Portal</h2>
+    <ul>
+      <li>Asignacion 1:<a href="#">Site Plan</a></li>
+      <li>Asignacion 2:<a href="#">HTML Markup Validation</a></li>
+    </ul>
+    
+  </main> 
+ 
+  <footer>
+    <p>
+      &copy;2019 Faviola Soliz - Location: Bolivia  
+      <a href="http://www.upds.edu.bo/"> UPDS - Cbba.</a>
+    </p>
+  </footer>
 </body>
 </html>
