--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <header>
-    <h1>Estudiante: Fabiola Soliz</h1>
-    <img src="imagenes/profile.png" alt="My Profile Picture">
+    <h1>Juan Alberto Zarraga Torrico</h1>
+    <img src="imagenes/profile.jpg" alt="My Profile Picture">
   </header> 
   <main>
     <h2>Tecnologia Web - Assignment Portal</h2>
