--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Juan Alberto Zarraga Torrico</h1>
-    <img src="imagenes/" alt="My Profile Picture">
+    <img src="imagenes/profile.jpg" alt="My Profile Picture">
   </header> 
   <main>
     <h2>Tecnologia Web - Assignment Portal</h2>
