Subida de Aignacion 2

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <header>
     <h1>Juan Alberto Zarraga Torrico</h1>
-    <img src="imagenes/profile.jpg" alt="My Profile Picture">
+    <img src="imagenes/profile.jpg" width="300" height="300" alt="My Profile Picture">
   </header> 
   <main>
     <h2>Tecnologia Web - Assignment Portal</h2>
     <ul>
       <li>Asignacion 1:<a href="Asignaciones/asignacion1/Plantilla Site Plan.docx.pdf">Site Plan</a></li>
-      <li>Asignacion 2:<a href="#">HTML Markup Validation</a></li>
+      <li>Asignacion 2:<a href="Asignaciones/asignacion2/fixed.html">HTML Markup Validation</a></li>
     </ul>
     
   </main> 
