--- a/Asignaciones/Asignacion3/layaout.html
+++ b/Asignaciones/Asignacion3/layaout.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bolivia Maravillosa</title>
-  <link rel="stylesheet" href="css/estilos.css">
+  <!--<link rel="stylesheet" href="css/estilos.css">-->
 </head>
 
 <body>
