--- a/Asignaciones/Asignacion3/layaout.html
+++ b/Asignaciones/Asignacion3/layaout.html
@@ -102,7 +102,18 @@
       semper ridiculus quisque sed vestibulum gravida.
       </p>
   </div>
-
+  <div class="informacion">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet 
+      condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean 
+      sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat 
+      tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed 
+      aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant. 
+      Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean, 
+      ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien 
+      semper ridiculus quisque sed vestibulum gravida.
+      </p>
+  </div>
   <footer>
     <div class="logo"></div>
     <div class="informacion-footer">
