--- a/Asignaciones/Asignacion3/layout.html
+++ b/Asignaciones/Asignacion3/layout.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bolivia Maravillosa</title>
   <!--<link rel="stylesheet" href="css/estilos.css">-->
+  <link rel="stylesheet" href="../asignacion4/css/normalize.css">
   
 </head>
 
