--- a/Asignaciones/Asignacion3/layout.html
+++ b/Asignaciones/Asignacion3/layout.html
@@ -6,132 +6,273 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bolivia Maravillosa</title>
-  <!--<link rel="stylesheet" href="css/estilos.css">-->
-  <link rel="stylesheet" href="../asignacion4/css/normalize.css">
-  
+  <link rel="stylesheet" href="css/estilos.css">
+  <script src="https://kit.fontawesome.com/e8a67cfe62.js"></script>
 </head>
 
 <body>
-  <header class="header-area">
-    <!--NAVEGACION-->
-    <div class="container-header">
-      <div class="row">
-        <div class="col">
-          <nav class="navbar">
-            <div class="logo">
-              <h1>sdfsdf</h1>
-              <img src="" alt="">
-            </div>
-            <div class="container-lista">
-              <ul class="lista">
-                <li><a href="">Inicio</a></li>
-                <li><a href="">¿Que hacer?</a></li>
-                <li><a href="">Contactanos</a></li>
-              </ul>
-          </nav>
-        </div>
+  <header class="header">
+    <div class="container">
+      <div class="logo">
+
       </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="">Principales Ciudades</a></li>
+          <li><a href="">Explora</a></li>
+          <li><a href="html/contacto.html">Contactanos</a></li>
+        </ul>
+      </nav>
     </div>
-
   </header>
-  <!--IMAGEN DE LA NAVEGACION-->
-
-  <div class="img-header">
-    <div class="container-header">
-      <div class="degrade">
-        <div class="bienvenido">
-          <h1>Disfruta la experiencia que te brinda Bolivia</h1>
-          <a class="btn" href="#">Explorar</a>
+  <!--BANNER -->
+  <!--
+<div class="baner-area" style="background-image: url(img/cbba.jpg)">
+  <div class="container-baner">
+    <div class="row h-100 align-items-center">
+      <div class="col-12">
+        <div class="banner content">
+ 
         </div>
       </div>
-
     </div>
   </div>
+</div>
+-->
+
+  <!--IMAGEN DE LA NAVEGACION-->
+  <div class="img-header" style="background-image: url(img/bolivia.jpg)"">
+    <div class=" container-header">
+    <div class="degrade">
+      <div class="bienvenido">
+        <h1>Disfruta la experiencia que te brinda Bolivia</h1>
+        <a class="btn" href="#">Explorar</a>
+      </div>
+    </div>
+
+  </div>
+  </div>
+
+
+
   <div class="ciudades-principales">
     <h1>Principales Ciudades</h1>
     <div class="la-paz">
       <h1>Ciudad de La Paz</h1>
       <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet 
-          condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean 
-          sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat 
-          tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed 
-          aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant. 
-          Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean, 
-          ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien 
-          semper ridiculus quisque sed vestibulum gravida.
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
       </p>
     </div>
 
     <div class="cohabamba">
       <h1>Ciudad de Cochabamba</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet 
-        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean 
-        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat 
-        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed 
-        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant. 
-        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean, 
-        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien 
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
         semper ridiculus quisque sed vestibulum gravida.
-        </p>
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
+    <div class="cohabamba">
+      <h1>Ciudad de Cochabamba</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
     </div>
 
     <div class="santa-cruz">
-        <h1>Ciudad de Santa Cruz de la Sierra</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet 
-          condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean 
-          sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat 
-          tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed 
-          aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant. 
-          Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean, 
-          ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien 
-          semper ridiculus quisque sed vestibulum gravida.
-          </p>
-      </div>
+      <h1>Ciudad de Santa Cruz de la Sierra</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+        condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+        sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+        tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+        aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+        Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+        ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+        semper ridiculus quisque sed vestibulum gravida.
+      </p>
+    </div>
   </div>
 
   <div class="informacion">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet 
-      condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean 
-      sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat 
-      tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed 
-      aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant. 
-      Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean, 
-      ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien 
+      Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+      condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+      sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+      tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+      aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+      Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+      ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
       semper ridiculus quisque sed vestibulum gravida.
-      </p>
+    </p>
   </div>
+
   <div class="informacion">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet 
-      condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean 
-      sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat 
-      tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed 
-      aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant. 
-      Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean, 
-      ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien 
+      Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+      condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+      sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+      tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+      aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+      Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+      ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
       semper ridiculus quisque sed vestibulum gravida.
-      </p>
+    </p>
   </div>
+
+  <div class="informacion">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
+      condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
+      sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
+      tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
+      aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
+      Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
+      ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
+      semper ridiculus quisque sed vestibulum gravida.
+    </p>
+  </div>
+  <!--PIE DE PAGINA-->
   <footer>
-    <div class="logo"></div>
-    <div class="informacion-footer">
-      <ul class="footer-lista">
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Ciudades Principales</a></li>
-        <li><a href="">Contactanos</a></li>
-      </ul>
+    <div class="container-footer-all">
+        <div class="container-footer">
+            <div class="logo-redes">
+                <h2 class="h2-footer">Redes Sociales</h2>
+                <i class="fab fa-facebook icon-social"></i>
+                <i class="fab fa-twitter icon-social"></i>
+                <i class="fab fa-instagram icon-social"></i>
+                <i class="fab fa-youtube icon-social"></i>
+      
+            </div>
+            <div class="soporte">
+              <h2 class="h2-footer">Soporte</h2>
+              <ul>
+                <li class="list-footer"><a class="a-footer" href="">Preguntas Frecuentes</a></li>
+                <li class="list-footer"><a class="a-footer" href="">Contactanos</a></li>
+                <li class="list-footer"><a class="a-footer" href="">Terminos y Condiciones</a></li>
+              </ul>
+            </div>
+            <div class="listas-footer">
+              <h2 class="h2-footer">Bolivia Maravillosa</h2>
+              <ul>
+                <li class="list-footer"><a class="a-footer" href="index.html">Inicio</a></li>
+                <li class="list-footer"><a class="a-footer" href="html/contacto.html">Principales Ciudades</a></li>
+                <li class="list-footer"><a class="a-footer" href="">Explora</a></li>
+              </ul>
+            </div>
+            <div class="ciudades">
+              <h2 class="h2-footer">Principales Ciudades</h2>
+              <ul>
+                <li class="list-footer"><a class="a-footer" href="">Cochabamba</a></li>
+                <li class="list-footer"><a class="a-footer" href="">Santa Cruz</a></li>
+                <li class="list-footer"><a class="a-footer" href="">La Paz</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="copy">
+            <p>Copyright © 2019 | Bolivia Maravillosa</p>
+            <p>Copyright © 2019 | Alberto Zarraga</p>
+          </div>
     </div>
-    <div class="redes-sociales">
-      <ul class="footer-redes">
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">YouTube</a></li>
-      </ul>
-    </div>
+    
   </footer>
 
 </body>
