--- a/Asignaciones/Asignacion3/layout.html
+++ b/Asignaciones/Asignacion3/layout.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bolivia Maravillosa</title>
-  <link rel="stylesheet" href="css/estilos.css">
+  <!--<link rel="stylesheet" href="css/estilos.css">-->
   <script src="https://kit.fontawesome.com/e8a67cfe62.js"></script>
 </head>
 
@@ -26,20 +26,7 @@
       </nav>
     </div>
   </header>
-  <!--BANNER -->
-  <!--
-<div class="baner-area" style="background-image: url(img/cbba.jpg)">
-  <div class="container-baner">
-    <div class="row h-100 align-items-center">
-      <div class="col-12">
-        <div class="banner content">
- 
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
+
 
   <!--IMAGEN DE LA NAVEGACION-->
   <div class="img-header" style="background-image: url(img/bolivia.jpg)"">
