--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Juan Alberto Zarraga Torrico.</h1>
+    <h1>Juan Alberto Zarraga Torrico</h1>
     <img src="imagenes/profile.jpg" width="300" height="300" alt="My Profile Picture">
   </header> 
   <main>
