--- a/Asignaciones/asignacion4/html/contacto.html
+++ b/Asignaciones/asignacion4/html/contacto.html
@@ -29,7 +29,7 @@
 
     <!--IMAGEN DE LA NAVEGACION-->
     <div class="img-header-information" style="background-image: url(../img/contacto.jpg)"">
-    <div class="conatiner container-header">
+    <div class="container-header">
         <div class="degrade">
             <div class="bienvnido bienvenido-information">
                 <h1>Contactanos</h1>
