--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li>Asignacion 2:<a href="Asignaciones/asignacion2/fixed.html">HTML Markup Validation</a></li>
       <li>Asignacion 3:<a href="Asignaciones/Asignacion3/layout.html">Asignacion 3.</a></li>
       <li>Asignacion 4:<a href="Asignaciones/asignacion4/index.html">Asignacion 4</a></li>
+      <li>Asignacion 5:<a href="Asignaciones/asignacion4/index.html">Correccion del menu responsive</a></li>
+      <li>Asignacion 6:<a href="Asignaciones/asignacion6/index.html">Hora</a></li>
     </ul>
     
   </main> 
