--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>Asignacion 4:<a href="Asignaciones/asignacion4/index.html">Asignacion 4</a></li>
       <li>Asignacion 5:<a href="Asignaciones/asignacion4/index.html">Correccion del menu responsive</a></li>
       <li>Asignacion 6:<a href="Asignaciones/asignacion6/index.html">Hora</a></li>
+      <li>Asignacion 7:<a href="Asignaciones/asignacion7/index.html">FlexBox</a></li>
     </ul>
     
   </main> 
