actualizacion de datos

--- a/Asignaciones/asignacion8/html/crearcuenta.html
+++ b/Asignaciones/asignacion8/html/crearcuenta.html
@@ -35,7 +35,7 @@
         <div class="container-info">
             <div class="formulario-information">
                 <div class="div-titulo">
-                    <h2>Registrarse</h2>
+                    <h2>Formulario de Informacion</h2>
                 </div>
 
                 <form action="">
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="div-info">
-                        <input type="submit" value="Registrarse">
+                        <input type="submit" value="Enviar">
                     </div>
                 </form>
             </div>
