--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>Asignacion 7:<a href="Asignaciones/asignacion7/index.html">FlexBox</a></li>
       <li>Asignacion 8:<a href="Asignaciones/asignacion8/html/login.html">Formularios.</a></li>
       <li>Asignacion 9:<a href="Asignaciones/asignacion9">JSon.</a></li>
-      <li>Asignacion 9:<a href="Asignaciones/asignacion10/js/bolivia.json">Archivo JSon.</a></li>
+      <li>Asignacion 9:<a href="Asignaciones/asignacion10/js/bolivia.json">Archivo JSon</a></li>
     </ul>
     
   </main> 
