--- a/Asignaciones/asignacion10/html/cochabamba.html
+++ b/Asignaciones/asignacion10/html/cochabamba.html
@@ -40,86 +40,68 @@
     </div>
     </div>
 
-    <!--HOME-->
-    <div class="container-information">
-        <div class="information">
-            <div class="formulario-inforation">
-                <form action="">
-                    <input type="text">
-                </form>
-            </div>
-            <div class="mapa-information">
 
-            </div>
+    <div id="section-info-div">
+        <div id="section-info-content">
         </div>
     </div>
 
+    <div>
+            <h1>OpenWeatherMap.org API Test</h1>
 
-    <div class="ciudades-principales">
-        <h1>Principales Ciudades</h1>
-        <div class="la-paz">
-            <h1>Ciudad de La Paz</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit dui lacinia, inceptos imperdiet
-                condimentum aliquam ullamcorper proin magnis pharetra vehicula tincidunt, felis aenean
-                sollicitudin conubia porttitor varius sem odio. Praesent maecenas facilisi placerat
-                tincidunt ornare cras sodales conubia ligula leo, libero lectus blandit sem hac nam sed
-                aliquet ultricies, non taciti pellentesque commodo nisl aliquam nascetur risus habitant.
-                Venenatis facilisi tristique luctus pharetra accumsan penatibus cras urna orci aenean,
-                ullamcorper nostra velit erat ut ornare rhoncus dapibus lobortis, vulputate cum sapien
-                semper ridiculus quisque sed vestibulum gravida.
-            </p>
-        </div>
+            <p>La temperatura actual en Cochabamba, Bolivia es <span id="cc-temp"></span>&deg; C <img id="cc-img"></p>
+        
+            <script src="../js/apiweathercbba.js"></script>
+    </div>
 
 
+    <!--PIE DE PAGINA-->
+    <footer>
+        <div class="container-footer-all">
+            <div class="container-footer">
+                <div class="logo-redes">
+                    <h2 class="h2-footer">Redes Sociales</h2>
+                    <i class="fab fa-facebook icon-social"></i>
+                    <i class="fab fa-twitter icon-social"></i>
+                    <i class="fab fa-instagram icon-social"></i>
+                    <i class="fab fa-youtube icon-social"></i>
 
-        <!--PIE DE PAGINA-->
-        <footer>
-            <div class="container-footer-all">
-                <div class="container-footer">
-                    <div class="logo-redes">
-                        <h2 class="h2-footer">Redes Sociales</h2>
-                        <i class="fab fa-facebook icon-social"></i>
-                        <i class="fab fa-twitter icon-social"></i>
-                        <i class="fab fa-instagram icon-social"></i>
-                        <i class="fab fa-youtube icon-social"></i>
-
-                    </div>
-                    <div class="soporte">
-                        <h2 class="h2-footer">Soporte</h2>
-                        <ul>
-                            <li class="list-footer"><a class="a-footer" href="">Preguntas Frecuentes</a></li>
-                            <li class="list-footer"><a class="a-footer" href="../html/contacto.html">Contactanos</a></li>
-                            <li class="list-footer"><a class="a-footer" href="">Terminos y Condiciones</a></li>
-                        </ul>
-                    </div>
-                    <div class="listas-footer">
-                        <h2 class="h2-footer">Bolivia Maravillosa</h2>
-                        <ul>
-                            <li class="list-footer"><a class="a-footer" href="../index.html">Inicio</a></li>
-                            <li class="list-footer"><a class="a-footer" href="../index.html#principales">Principales
-                                    Ciudades</a>
-                            </li>
-                            <li class="list-footer"><a class="a-footer" href="../html/explora.html">Explora</a></li>
-                        </ul>
-                    </div>
-                    <div class="ciudades">
-                        <h2 class="h2-footer">Principales Ciudades</h2>
-                        <ul>
-                            <li class="list-footer"><a class="a-footer" href="../html/cochabamba.html">Cochabamba</a></li>
-                            <li class="list-footer"><a class="a-footer" href="../html/santacruz.html">Santa Cruz</a></li>
-                            <li class="list-footer"><a class="a-footer" href="../html/lapaz.html">La Paz</a></li>
-                        </ul>
-                    </div>
                 </div>
-                <div class="copy">
-                    <p>Copyright © 2019 | Bolivia Maravillosa</p>
-                    <p>Copyright © 2019 | Alberto Zarraga</p>
+                <div class="soporte">
+                    <h2 class="h2-footer">Soporte</h2>
+                    <ul>
+                        <li class="list-footer"><a class="a-footer" href="">Preguntas Frecuentes</a></li>
+                        <li class="list-footer"><a class="a-footer" href="../html/contacto.html">Contactanos</a></li>
+                        <li class="list-footer"><a class="a-footer" href="">Terminos y Condiciones</a></li>
+                    </ul>
+                </div>
+                <div class="listas-footer">
+                    <h2 class="h2-footer">Bolivia Maravillosa</h2>
+                    <ul>
+                        <li class="list-footer"><a class="a-footer" href="../index.html">Inicio</a></li>
+                        <li class="list-footer"><a class="a-footer" href="../index.html#principales">Principales
+                                Ciudades</a>
+                        </li>
+                        <li class="list-footer"><a class="a-footer" href="../html/explora.html">Explora</a></li>
+                    </ul>
+                </div>
+                <div class="ciudades">
+                    <h2 class="h2-footer">Principales Ciudades</h2>
+                    <ul>
+                        <li class="list-footer"><a class="a-footer" href="../html/cochabamba.html">Cochabamba</a></li>
+                        <li class="list-footer"><a class="a-footer" href="../html/santacruz.html">Santa Cruz</a></li>
+                        <li class="list-footer"><a class="a-footer" href="../html/lapaz.html">La Paz</a></li>
+                    </ul>
                 </div>
             </div>
+            <div class="copy">
+                <p>Copyright © 2019 | Bolivia Maravillosa</p>
+                <p>Copyright © 2019 | Alberto Zarraga</p>
+            </div>
+        </div>
 
-        </footer>
-
+    </footer>
+    <script src="../js/javascrip.js"></script>
 </body>
 
 </html>
