--- a/Asignaciones/asignacion6/index.html
+++ b/Asignaciones/asignacion6/index.html
@@ -95,7 +95,7 @@
           <i class="fab fa-twitter icon-social"></i>
           <i class="fab fa-instagram icon-social"></i>
           <i class="fab fa-youtube icon-social"></i>
-          <div>
+          <div class="hora">
             <script src="js/main.js"></script>
           </div>
         </div>
