--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li>Asignacion 8:<a href="Asignaciones/asignacion10/js/bolivia.json">Archivo JSon.</a></li>
       <li>Asignacion 9:<a href="Asignaciones/asignacion10/html/cochabamba.html">Aplicacion JSon</a></li>
       <li>Asignacion 10:<a href="Asignaciones/asignacion 11/html/cochabamba.html">Aplicacion del Clima</a></li>
+      <li>Examen:<a href="Asignaciones/Examen/cbba.html">Examen</a></li>
     </ul>
     
   </main> 
