Subida Proyecto Final

--- a/Asignaciones/ProyectoFinal/html/lapaz.html
+++ b/Asignaciones/ProyectoFinal/html/lapaz.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>La Paz | Bolivia Maravillosa</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="../css/pequeno.css">
-    <link rel="stylesheet" href="../css/mediano.css">
+    <link rel="shortcut icon" href="../img/faviconbol.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e8a67cfe62.js"></script>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/mediano.css">
+    <link rel="stylesheet" href="../css/pequeno.css">
 </head>
 
 <body>
