--- a/Asignaciones/ProyectoFinal/index.html
+++ b/Asignaciones/ProyectoFinal/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bolivia Maravillosa</title>
-  <link rel="shortcut icon" href="../img/faviconbol.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/faviconbol.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/e8a67cfe62.js"></script>
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="stylesheet" href="css/pequeno.css">
