--- a/Asignaciones/ProyectoFinal/html/cochabamba.html
+++ b/Asignaciones/ProyectoFinal/html/cochabamba.html
@@ -210,7 +210,9 @@
                     <i class="fab fa-twitter icon-social"></i>
                     <i class="fab fa-instagram icon-social"></i>
                     <i class="fab fa-youtube icon-social"></i>
-
+                    <div class="img-div">
+                            <img src="../img/faviconbol.png" alt="" class="logoimg">
+                    </div>
                 </div>
                 <div class="soporte">
                     <h2 class="h2-footer">Soporte</h2>
